--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 .home__content__left {
   order: 2;
   flex: 1;
@@ -48,7 +49,7 @@
 
 .home__content {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.514), 0 0px 20px 0 rgba(0, 0, 0, 0.548);
-  background: url('./medium-bg.jpg');
+  background: url("./medium-bg.jpg");
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
@@ -211,10 +212,23 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 200px;
+  align-items: center;
+  height: 750px;
+  width: 100%;
+}
+.footer__content {
+  position: absolute;
+  z-index: -1;
+  height: 500px;
+  bottom: 0;
+  padding-top: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   background-color: var(--secondary-color);
 }
+
 .contact__us__border {
   margin-top: 10px;
   border-right: 1px solid #c42012;
@@ -235,11 +249,12 @@
   color: #fff;
   align-self: center;
   font-size: 0.8rem;
+  margin-bottom: 5px;
 }
 @media (min-width: 480px) {
   .home__content {
     margin-top: 100px;
-    background: url('./medium-bg.jpg');
+    background: url("./medium-bg.jpg");
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
@@ -272,7 +287,7 @@
 
 @media (min-width: 768px) {
   .home__content {
-    background: url('./mlarge-bg.jpg');
+    background: url("./mlarge-bg.jpg");
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
@@ -317,7 +332,7 @@
 
 @media (min-width: 1024px) {
   .home__content {
-    background: url('./large-bg.jpg');
+    background: url("./large-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -339,7 +354,7 @@
 
 @media (min-width: 1280px) {
   .home__content {
-    background: url('./xlarge-bg.jpg');
+    background: url("./xlarge-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
