--- a/client/src/Components/ContactUs/ContactUs.css
+++ b/client/src/Components/ContactUs/ContactUs.css
@@ -40,6 +40,16 @@
   color: var(--primary-color);
   text-align: right;
 }
+.msg__sented {
+  color: var(--primary-color);
+  text-align: center;
+  display: block;
+}
+
+.msg__sented__hidden {
+  display: none;
+}
+
 @media (min-width: 480px) {
   .contact__Form {
     width: 400px;
